<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">
 <ImageView
     android:id="@+id/iv_stock_update"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:src="@drawable/imgplaceholder"
     android:layout_marginBottom="9dp"/>
    <TextView
        android:id="@+id/itemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/categoryUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_category"

        android:textColor="@color/blue"
        android:textColorHint="@color/blue" />
    <EditText
        android:id="@+id/itemNameUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_item_name"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue" />
    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_price"
        android:inputType="number"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue" />
    <EditText
        android:id="@+id/sizeUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_size"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/dateEdt"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_date_dd_mm_yyy"
            android:inputType="number"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue"
            tools:ignore="TextFields" />
        <Button
            android:id="@+id/calendarBtn"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="9sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <EditText
        android:id="@+id/qty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_qty"
        android:inputType="number"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue" />
    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_code"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>