<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="20dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:layout_margin="14dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/linearlayout1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/item_name"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txtItemCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/item_category"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txtQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/qty"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txtItemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/rp_0"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txtPaymentMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/payment_method"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txtItemCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/code"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txtItemDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/date"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />




            <TextView
                android:id="@+id/txtItemSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/size"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewSales"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/orange"
                android:src="@drawable/imgplaceholder" />
            <TextView
                android:background="@drawable/amountbg_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:text="@string/edit"
                android:textColor="@color/blue"
                android:layout_gravity="center"
                />

        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>