<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:src="@drawable/forgot"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_your_email_address"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/please_enter_your_registered_email_address_to_receive_a_verification_link"
            android:gravity="center"/>
        <EditText
            android:id="@+id/edt_email_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editextbg"
            android:layout_marginTop="10dp"
            android:autofillHints="" />

        <Button
            android:onClick="sendVerif"
            android:id="@+id/btn_send"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/poppins"
            android:layout_gravity="center"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="15dp" />


    </LinearLayout>

</RelativeLayout>