<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Sales.analytics.MonthlySalesChartFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/blue"
                    android:text="@string/monthly_sales"/>



                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >


                                <EditText

                                    android:id="@+id/inputYear"
                                    android:layout_width="300dp"
                                    android:layout_height="40dp"
                                    android:layout_marginTop="10dp"
                                    android:background="@drawable/amountbg_blue"
                                    android:hint="@string/input_year"
                                    android:inputType="number"
                                    android:textColorHint="@color/blue"
                                    android:textSize="12sp" />


                                <Button
                                    android:id="@+id/searchMonth"
                                    android:backgroundTint="@color/blue"
                                    android:layout_width="90dp"
                                    android:layout_height="40dp"
                                    android:text="@string/filter"
                                    android:textSize="8sp"
                                    android:textColor="@color/orange"
                                    android:layout_marginStart="5dp"
                                    android:layout_marginTop="10dp"
                                    tools:ignore="SmallSp" />
                    </LinearLayout>
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineChart"
                    android:layout_width="match_parent"
                    android:layout_height="500dp" />
                        </LinearLayout>





</FrameLayout>